--- a/web/pom.xml
+++ b/web/pom.xml
@@ -6,7 +6,7 @@
 	<parent>
 		<groupId>fit.pay2play.web</groupId>
 		<artifactId>p2p</artifactId>
-		<version>1.0.0-SNAPSHOT</version>
+		<version>1.0.1-SNAPSHOT</version>
 	</parent>
 
 	<artifactId>p2p-web</artifactId>
@@ -107,6 +107,11 @@
 		<dependency>
 			<groupId>com.vaadin</groupId>
 			<artifactId>vaadin-themes</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>com.vaadin</groupId>
+			<artifactId>vaadin-charts</artifactId>
+			<version>4.1.0.alpha2</version>
 		</dependency>
 		<dependency>
 			<groupId>org.vaadin.addon</groupId>
