--- a/util/pom.xml
+++ b/util/pom.xml
@@ -7,13 +7,18 @@
     <parent>
         <groupId>fit.pay2play.web</groupId>
         <artifactId>p2p</artifactId>
-        <version>1.0.1-SNAPSHOT</version>
+        <version>1.1.0-SNAPSHOT</version>
     </parent>
 
     <artifactId>p2p-util</artifactId>
     <packaging>jar</packaging>
 
     <dependencies>
+        <dependency>
+            <groupId>xyz.cleangone.data</groupId>
+            <artifactId>data-aws-dynamo-p2p</artifactId>
+            <version>1.1.0-SNAPSHOT</version>
+        </dependency>
         <dependency>
             <groupId>xyz.cleangone.util</groupId>
             <artifactId>util-env-p2p</artifactId>
